--- a/css/main.css
+++ b/css/main.css
@@ -6,18 +6,12 @@
     box-sizing: border-box;
 }
 
-body {
+.backwrapper {
     height: 100%;
     font-family: var(--sm-font);
-    background-image: url(../assets/img/images/pattern-logos-characters-bd1f26898b2027c98ce8ba17c084f523.png);
+    background-image: url(../assets/img/images/section-wrapper-bg.png);
     background-repeat: no-repeat;
-    background-attachment: fixed;
-}
-
-.news {
-    background-image: url(../assets/img/images/pattern-logos-characters-bd1f26898b2027c98ce8ba17c084f523.png);
-    background-repeat: no-repeat;
-    background-attachment: fixed;
+    background-size: 100%;
 }
 
 :root {
@@ -42,6 +36,7 @@ body {
     --clr-gray: #e2e2e2;
     --clr-red: #961818;
 }
+
 
 .section__container {
     max-width: var(--max-width);
@@ -69,7 +64,6 @@ body {
     width: 75px;
     background-color: var(--pink);
 }
-
 
 /* button */
 .bg-primary {
@@ -486,8 +480,16 @@ body {
 
 /* about */
 #about {
-    background-color: rgba(179, 179, 179, 0.05);
+    background-image: url(../assets/img/images/Backgroun_diagonal.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 150px 0;
+    background-size: 50%;
+    background-position: left;
 }
+
+
+
 
 @keyframes slide {
     from {
@@ -1092,13 +1094,18 @@ main {
     height: 100%;
     background-color: rgba(56, 119, 145, 0.6);
     display: flex;
+    flex-direction: column;
+    /* Cambio importante: ahora los botones estarán en columna */
     justify-content: center;
     align-items: center;
 }
 
-.buy-btn {
+.buy-btn,
+.details-btn {
     width: 160px;
     height: 40px;
+    margin-top: 10px;
+    /* Agrega un margen superior entre los botones */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -1107,7 +1114,21 @@ main {
     font-weight: 700;
     letter-spacing: 1px;
     border-radius: 20px;
-    box-shadow: 2px 2px 30px rgba(0, 0, 0, .2);
+    box-shadow: 2px 2px 30px rgba(0, 0, 0, 0.2);
+}
+
+
+
+.details-btn:hover {
+    color: white;
+    background-color: palevioletred;
+    transition: all ease 0.3s;
+}
+
+
+.slide-img:hover .overlay .details-btn {
+    visibility: visible;
+    animation: fade 0.5s;
 }
 
 .buy-btn:hover {
@@ -1588,3 +1609,251 @@ main {
 main {
     flex: 1;
 }
+
+
+.button {
+    width: 32px;
+    /* Reducido el ancho */
+    height: 32px;
+    /* Reducido el alto */
+    border-radius: 50%;
+    background-color: rgb(20, 20, 20);
+    border: none;
+    font-weight: 600;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.164);
+    /* Ajustado el tamaño de la sombra */
+    cursor: pointer;
+    transition-duration: .3s;
+    overflow: hidden;
+    position: relative;
+    font-size: 12px;
+    /* Reducido el tamaño de fuente */
+}
+
+.svgIcon {
+    width: 8px;
+    /* Reducido el tamaño del ícono */
+    transition-duration: .3s;
+}
+
+.svgIcon path {
+    fill: white;
+}
+
+.button:hover {
+    width: 80px;
+    border-radius: 50px;
+    transition-duration: .3s;
+    background-color: rgb(255, 69, 69);
+    align-items: center;
+}
+
+.button:hover .svgIcon {
+    width: 24px;
+    transition-duration: .3s;
+    transform: translateY(30%);
+}
+
+.button::before {
+    position: absolute;
+    top: -16;
+    color: white;
+    transition-duration: .3s;
+    font-size: 10px;
+}
+
+.button:hover::before {
+    font-size: 10px;
+    opacity: 1;
+    transform: translateY(20px);
+    transition-duration: .3s;
+}
+
+footer {
+    position: relative;
+}
+
+.footer-image {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    z-index: 1;
+    width: auto;
+    height: auto;
+}
+
+.main-wrapper {
+    min-height: 100vh;
+    background-color: #f1f1f1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.container {
+    max-width: 1200px;
+    padding: 0 1rem;
+    margin: 0 auto;
+}
+
+.product-div {
+    margin: 1rem 0;
+    padding: 2rem 0;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    background-color: #fff;
+    border-radius: 3px;
+    column-gap: 10px;
+}
+
+.product-div-left {
+    padding: 20px;
+}
+
+.product-div-right {
+    padding: 20px;
+}
+
+.img-container img {
+    width: 200px;
+    margin: 0 auto;
+}
+
+.hover-container {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    margin-top: 32px;
+}
+
+.hover-container div {
+    border: 2px solid rgba(252, 160, 175, 0.7);
+    padding: 1rem;
+    border-radius: 3px;
+    margin: 0 4px 8px 4px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.active {
+    border-color: rgb(255, 145, 163) !important;
+}
+
+.hover-container div:hover {
+    border-color: rgb(255, 145, 163);
+}
+
+.hover-container div img {
+    width: 50px;
+    cursor: pointer;
+}
+
+.product-div-right span {
+    display: block;
+}
+
+.product-name {
+    font-size: 26px;
+    margin-bottom: 22px;
+    font-weight: 700;
+    letter-spacing: 1px;
+    opacity: 0.9;
+}
+
+.product-price {
+    font-weight: 700;
+    font-size: 24px;
+    opacity: 0.9;
+    font-weight: 500;
+}
+
+.product-rating {
+    display: flex;
+    align-items: center;
+    margin-top: 12px;
+}
+
+.product-rating span {
+    margin-right: 6px;
+}
+
+.product-description {
+    font-weight: 18px;
+    line-height: 1.6;
+    font-weight: 300;
+    opacity: 0.9;
+    margin-top: 22px;
+}
+
+.btn-groups {
+    margin-top: 22px;
+}
+
+.btn-groups button {
+    display: inline-block;
+    font-size: 16px;
+    font-family: inherit;
+    text-transform: uppercase;
+    padding: 15px 16px;
+    color: #fff;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.btn-groups button .fas {
+    margin-right: 8px;
+}
+
+.add-cart-btn {
+    background-color: #FF9F00;
+    border: 2px solid #FF9F00;
+    margin-right: 8px;
+}
+
+.add-cart-btn:hover {
+    background-color: #fff;
+    color: #FF9F00;
+}
+
+.buy-now-btn {
+    background-color: #000;
+    border: 2px solid #000;
+}
+
+.buy-now-btn:hover {
+    background-color: #fff;
+    color: #000;
+}
+
+@media screen and (max-width: 992px) {
+    .product-div {
+        grid-template-columns: 100%;
+    }
+
+    .product-div-right {
+        text-align: center;
+    }
+
+    .product-rating {
+        justify-content: center;
+    }
+
+    .product-description {
+        max-width: 400px;
+        margin-right: auto;
+        margin-left: auto;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .btn-groups button {
+        width: 100%;
+        margin-bottom: 10px;
+    }
+}
+
